# blackjack

./: .gitignore  README.md  freitas.c  pinheiro.c
backup/: sdl.h
labs/: 1.c  2.c
pdf/: blackjack.aux  blackjack.dvi  blackjack.tex  blackjack.tex.backup  ea.c  error.h  file.c  list.h  logic.h  main.c  main.h
src/: .logic.c.swp  .logic.h.swp  .main.c.swp  .sdl.c.swp  .sdl.h.swp  Makefile  Makefile.static  blackjack  blackjack.sln  blackjack.vcxproj  config1.txt  config3.txt  ea.c  ea.h  ea.txt  error.c  error.h  file.c  file.h  list.c  list.h  logic.c  logic.h  main.c  main.h  meson.build  meson_static.build  parametros.txt  sdl.c  sdl.h  stats.txt  types.h
src/conf/: config2.txt  stats.txt
src/html/: annotated.html  classes.html  ea_8h_source.html  error_8h_source.html  file_8h_source.html  files.html  index.html  list_8h_source.html  logic_8h_source.html  main_8h_source.html  sdl_8h_source.html  struct_card-members.html  struct_card.html  struct_config-members.html  struct_config.html  struct_list-members.html  struct_list.html  struct_megadeck-members.html  struct_megadeck.html  struct_player-members.html  struct_player.html  struct_stack-members.html  struct_stack.html  struct_strategy-members.html  struct_strategy.html  types_8h_source.html
src/html/search/: all_2.js  all_4.js  classes_0.js  search.js
src/latex/: annotated.tex  refman.tex  struct_card.tex  struct_config.tex  struct_list.tex  struct_megadeck.tex  struct_player.tex  struct_stack.tex  struct_strategy.tex
src/txt/: bugs.txt  ea.txt  hardtotals.txt  softtotals.txt
tmp/: file.c  file.h  (+12 more)
(+6 files in other folders)
